tests/src/frontend/runtime/invalid/missing_native.sk
native class Foo {
  fun getBar(): void;
}
